add ability to view emails provided by service

--- a/src/app/all-emails/all-emails.component.html
+++ b/src/app/all-emails/all-emails.component.html
@@ -1,3 +1,3 @@
-<p>
-  all-emails works!
-</p>
+<div *ngFor="let currentEmail of emails">
+  <strong>{{currentEmail.from}} - {{currentEmail.subject}} {{currentEmail.body}} {{currentEmail.date}} </strong>
+</div>
