--- a/src/app/all-emails/all-emails.component.html
+++ b/src/app/all-emails/all-emails.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let currentEmail of emails">
-  <strong>{{currentEmail.from}} - {{currentEmail.subject}} {{currentEmail.body}} {{currentEmail.date}} </strong>
+  <strong>{{currentEmail.from}} - {{currentEmail.subject}} </strong> To: {{currentEmail.to}} {{currentEmail.body}} {{currentEmail.date}}
 </div>
