--- a/src/app/all-emails/all-emails.component.html
+++ b/src/app/all-emails/all-emails.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let currentEmail of emails">
-  <strong>{{currentEmail.from}} ({{currentEmail.fromEmail}}) - {{currentEmail.subject}} </strong> To: {{currentEmail.getRecipients()}} {{currentEmail.body}} {{currentEmail.date}}
-</div>
+<ul class="list-group" *ngFor="let currentEmail of emails">
+  <li class="list-group-item"><strong>{{currentEmail.from}} ({{currentEmail.fromEmail}}) - {{currentEmail.subject}} </strong> To: {{currentEmail.getRecipients()}} {{currentEmail.body}} {{currentEmail.date}}</li>
+</ul>
