--- a/src/app/all-emails/all-emails.component.html
+++ b/src/app/all-emails/all-emails.component.html
@@ -1,3 +1,3 @@
-<ul class="list-group" *ngFor="let currentEmail of emails">
-  <li class="list-group-item"><strong>{{currentEmail.from}} ({{currentEmail.fromEmail}}) - {{currentEmail.subject}} </strong> To: {{currentEmail.getRecipients()}} {{currentEmail.body}} {{currentEmail.date}}</li>
+<ul class="list-group" *ngFor="let email of emails">
+  <li class="list-group-item" (click)="goToEmail(email)"><strong>{{email.from}} ({{email.fromEmail}}) - {{email.subject}} </strong> To: {{email.getRecipients()}} {{email.body}} {{email.date}}</li>
 </ul>
