--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,3 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" routerlink="emails">All Emails</a>
-
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerlink="trash">Trash</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerlink="/articles/new">Add New Article</a>
-      </li>
-    </ul>
-</nav>
+<a routerLink="emails">All Emails</a>
+<a routerlink="trash">Trash</a>
+<a routerlink="starred">Starred</a>
