reenabled trash button.

--- a/src/app/email-detail/email-detail.component.html
+++ b/src/app/email-detail/email-detail.component.html
@@ -8,6 +8,8 @@
 <br>
 <p>{{emailToDisplayModel.body}}</p>
 
+<button class="btn btn-danger" (click)="trashEmail()">Move email to trash</button>
+
 <!-- <h1>{{(emailToDisplay | async)?.subject}}</h1>
 <br>
 <h5><strong>From: </strong> {{(emailToDisplay | async)?.from}} ({{(emailToDisplay | async)?.fromEmail}})</h5>
