--- a/src/app/trash/trash.component.html
+++ b/src/app/trash/trash.component.html
@@ -1,2 +1,6 @@
 <app-navbar></app-navbar>
-<p>trash works!</p>
+<ul class="list-group" *ngFor="let email of emailModels | emailFilter:'trash'">
+  <li class="list-group-item" (click)="goToEmail(email)"><strong>{{email.from}} ({{email.fromEmail}}) - {{email.subject}} - </strong>{{email.getShortenedBody()}} <strong>-</strong> {{email.date.toLocaleTimeString('en-US', {month: '2-digit', day: '2-digit', year: 'numeric',  hour: '2-digit', minute: '2-digit', hour12: true})}}</li>
+</ul>
+<br>
+<button class="btn btn-danger" (click)="emptyTrash()">Empty Trash</button>
