add navbar to email details and modify firebase rules so it doesnt break when refreshing the page.

--- a/src/app/email-detail/email-detail.component.html
+++ b/src/app/email-detail/email-detail.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <h1>{{emailToDisplayModel.subject}}</h1>
 <br>
 <h5><strong>From: </strong> {{emailToDisplayModel.from}} ({{emailToDisplayModel.fromEmail}})</h5>
