--- a/src/app/email-detail/email-detail.component.html
+++ b/src/app/email-detail/email-detail.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<div id="emailText">
 <h1>{{emailToDisplayModel.subject}}</h1>
 <br>
 <h5><strong>From: </strong> {{emailToDisplayModel.from}} ({{emailToDisplayModel.fromEmail}})</h5>
@@ -9,6 +9,7 @@
 <h5><strong>Date sent: </strong>{{emailToDisplayModel.date.toLocaleTimeString('en-US', {month: '2-digit', day: '2-digit', year: 'numeric',  hour: '2-digit', minute: '2-digit', hour12: true})}}</h5>
 <br>
 <p>{{emailToDisplayModel.body}}</p>
+</div>
 
 <button class="btn btn-danger" (click)="trashEmail()">Move email to trash</button>
 
