--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,5 +8,8 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/starred">Starred</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/sent">Sent</a>
+      </li>
     </ul>
 </nav>
