--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,5 +11,8 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/sent">Sent</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/new">Add Email (For testing)</a>
+      </li>
     </ul>
 </nav>
